# job-search

./: .gitignore  Makefile  README.md  pyproject.toml  requirements.txt
_/: README.md
data/interim/: AW_Genentech_MDAE_Resume.md  AW_Homeward_Resume.md  AW_Resume.md
data/query/: ALL.txt  DS.txt  DS_DC.txt  DS_Healthcare.txt  DS_Midwest.txt  DS_NY.txt  DS_NorCal.txt  DS_NorCal_Healthcare.txt  DS_NorCal_Remote.txt  DS_Remote.txt  DS_Seattle.txt  DS_SoCal.txt  Healthcare.txt  SF.txt  SW.txt  SW_Remote.txt
data/query/_/: DS.txt
data/raw/: Alex_Wu_Resume.md  cities.csv
docs/: mkdocs.yml
docs/docs/: index.md
job_search/: __init__.py  _pl.py  ai.py  app.py  backend.py  company.py  comps.py  config.py  dataset.py  jobs.py  resume.py  scraper.py  utils.py
notebooks/: 0_EDA.ipynb  1_Keywords.ipynb  2_Job_Search.ipynb  2_Report.ipynb  3_DuckDB.ipynb  4_Darn.ipynb  EDA.py  bota.py  jd.md  jdf.py
