[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "job_search"
version = "0.0.1"
description = "Job search tools"
authors = [
  { name = "Alexander Wu" },
]

readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    
]
dependencies = [
    "mkdocs",
    "pip",
    "pytest",
    "python-dotenv",
    "ruff",
]
requires-python = "~=3.12.0"


[tool.ruff]
line-length = 99
src = ["job_search"]
include = ["pyproject.toml", "job_search/**/*.py"]

[tool.ruff.lint]
extend-select = ["I"]  # Add import sorting

[tool.ruff.lint.isort]
known-first-party = ["job_search"]
force-sort-within-sections = true

